Добавлены методы для прикладного использования  - расширен поиск по ссылке  - скорректирован поиск модулей
Исправлены ошибки
 - некорректно создавалась пустая конфигурация
 - общие модули отсутствовали в списке модулей конфигурации